chore:cb operation log api define
